// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`antenna-genius-band-labels Node should match snapshot 1`] = `
AntennaGeniusBandLabels {
  "_closeCallbacks": Array [],
  "_inputCallback": null,
  "_inputCallbacks": null,
  "_wire": "n3",
  "_wireCount": 1,
  "bandNameA": "",
  "bandNameB": "",
  "g": undefined,
  "id": "n2",
  "name": "test name",
  "send": [Function],
  "server": AntennaGeniusServerNode {
    "_closeCallbacks": Array [
      [Function],
    ],
    "_inputCallback": null,
    "_inputCallbacks": null,
    "_wireCount": 0,
    "activeColor": "Green",
    "antennas": Array [],
    "autoConnect": false,
    "bands": Array [],
    "client": Socket {
      "_events": Object {
        "close": [Function],
        "connect": [Function],
        "end": [Function],
        "error": [Function],
      },
      "_eventsCount": 4,
      "_hadError": false,
      "_host": null,
      "_maxListeners": undefined,
      "_parent": null,
      "_pendingData": null,
      "_pendingEncoding": "",
      "_readableState": ReadableState {
        "autoDestroy": true,
        "awaitDrainWriters": null,
        "buffer": BufferList {
          "head": null,
          "length": 0,
          "tail": null,
        },
        "closeEmitted": false,
        "closed": false,
        "constructed": true,
        "dataEmitted": false,
        "decoder": null,
        "defaultEncoding": "utf8",
        "destroyed": false,
        "emitClose": false,
        "emittedReadable": false,
        "encoding": null,
        "endEmitted": false,
        "ended": false,
        "errorEmitted": false,
        "errored": null,
        "flowing": null,
        "highWaterMark": 16384,
        "length": 0,
        "multiAwaitDrain": false,
        "needReadable": false,
        "objectMode": false,
        "pipes": Array [],
        "readableListening": false,
        "reading": false,
        "readingMore": false,
        "resumeScheduled": false,
        "sync": true,
        Symbol(kPaused): null,
      },
      "_server": null,
      "_sockname": null,
      "_writableState": WritableState {
        "afterWriteTickInfo": null,
        "allBuffers": true,
        "allNoop": true,
        "autoDestroy": true,
        "bufferProcessing": false,
        "buffered": Array [],
        "bufferedIndex": 0,
        "closeEmitted": false,
        "closed": false,
        "constructed": true,
        "corked": 0,
        "decodeStrings": false,
        "defaultEncoding": "utf8",
        "destroyed": false,
        "emitClose": false,
        "ended": false,
        "ending": false,
        "errorEmitted": false,
        "errored": null,
        "finalCalled": false,
        "finished": false,
        "highWaterMark": 16384,
        "length": 0,
        "needDrain": false,
        "objectMode": false,
        "onwrite": [Function],
        "pendingcb": 0,
        "prefinished": false,
        "sync": true,
        "writecb": null,
        "writelen": 0,
        "writing": false,
        Symbol(kOnFinished): Array [],
      },
      "allowHalfOpen": false,
      "connecting": false,
      "server": null,
      Symbol(async_id_symbol): -1,
      Symbol(kHandle): null,
      Symbol(kSetNoDelay): false,
      Symbol(lastWriteQueueSize): 0,
      Symbol(timeout): null,
      Symbol(kBuffer): null,
      Symbol(kBufferCb): null,
      Symbol(kBufferGen): null,
      Symbol(kCapture): false,
      Symbol(kBytesRead): 0,
      Symbol(kBytesWritten): 0,
    },
    "connected": false,
    "disabledColor": "Black",
    "g": undefined,
    "host": undefined,
    "id": "n1",
    "info": Object {},
    "interval": null,
    "name": "test name",
    "port": 9007,
    "selectedColor": "Blue",
    "send": [Function],
    "status": Object {},
    "timer": null,
    "type": "antenna-genius-server",
    "updatesEventEmitter": UpdatesEventEmitter {
      "_events": Object {
        "closed": [Function],
        "connected": [Function],
        "status": [Function],
      },
      "_eventsCount": 3,
      "_maxListeners": 0,
      Symbol(kCapture): false,
    },
    "wires": Array [],
    "z": undefined,
  },
  "type": "antenna-genius-band-labels",
  "wires": Array [
    Array [
      "n3",
    ],
  ],
  "z": undefined,
}
`;

exports[`antenna-genius-band-labels Node should not provide connected status 1`] = `
AntennaGeniusBandLabels {
  "_closeCallbacks": Array [],
  "_inputCallback": null,
  "_inputCallbacks": null,
  "_wire": "n3",
  "_wireCount": 1,
  "bandNameA": "",
  "bandNameB": "",
  "g": undefined,
  "id": "n2",
  "name": "test name",
  "send": [Function],
  "server": AntennaGeniusServerNode {
    "_closeCallbacks": Array [
      [Function],
    ],
    "_inputCallback": null,
    "_inputCallbacks": null,
    "_wireCount": 0,
    "activeColor": "Green",
    "antennas": Array [],
    "autoConnect": false,
    "bands": Array [],
    "client": Socket {
      "_events": Object {
        "close": [Function],
        "connect": [Function],
        "end": [Function],
        "error": [Function],
      },
      "_eventsCount": 4,
      "_hadError": false,
      "_host": null,
      "_maxListeners": undefined,
      "_parent": null,
      "_pendingData": null,
      "_pendingEncoding": "",
      "_readableState": ReadableState {
        "autoDestroy": true,
        "awaitDrainWriters": null,
        "buffer": BufferList {
          "head": null,
          "length": 0,
          "tail": null,
        },
        "closeEmitted": false,
        "closed": false,
        "constructed": true,
        "dataEmitted": false,
        "decoder": null,
        "defaultEncoding": "utf8",
        "destroyed": false,
        "emitClose": false,
        "emittedReadable": false,
        "encoding": null,
        "endEmitted": false,
        "ended": false,
        "errorEmitted": false,
        "errored": null,
        "flowing": null,
        "highWaterMark": 16384,
        "length": 0,
        "multiAwaitDrain": false,
        "needReadable": false,
        "objectMode": false,
        "pipes": Array [],
        "readableListening": false,
        "reading": false,
        "readingMore": false,
        "resumeScheduled": false,
        "sync": true,
        Symbol(kPaused): null,
      },
      "_server": null,
      "_sockname": null,
      "_writableState": WritableState {
        "afterWriteTickInfo": null,
        "allBuffers": true,
        "allNoop": true,
        "autoDestroy": true,
        "bufferProcessing": false,
        "buffered": Array [],
        "bufferedIndex": 0,
        "closeEmitted": false,
        "closed": false,
        "constructed": true,
        "corked": 0,
        "decodeStrings": false,
        "defaultEncoding": "utf8",
        "destroyed": false,
        "emitClose": false,
        "ended": false,
        "ending": false,
        "errorEmitted": false,
        "errored": null,
        "finalCalled": false,
        "finished": false,
        "highWaterMark": 16384,
        "length": 0,
        "needDrain": false,
        "objectMode": false,
        "onwrite": [Function],
        "pendingcb": 0,
        "prefinished": false,
        "sync": true,
        "writecb": null,
        "writelen": 0,
        "writing": false,
        Symbol(kOnFinished): Array [],
      },
      "allowHalfOpen": false,
      "connecting": false,
      "server": null,
      Symbol(async_id_symbol): -1,
      Symbol(kHandle): null,
      Symbol(kSetNoDelay): false,
      Symbol(lastWriteQueueSize): 0,
      Symbol(timeout): null,
      Symbol(kBuffer): null,
      Symbol(kBufferCb): null,
      Symbol(kBufferGen): null,
      Symbol(kCapture): false,
      Symbol(kBytesRead): 0,
      Symbol(kBytesWritten): 0,
    },
    "connected": false,
    "disabledColor": "Black",
    "g": undefined,
    "host": undefined,
    "id": "n1",
    "info": Object {},
    "interval": null,
    "name": "test name",
    "port": 9007,
    "selectedColor": "Blue",
    "send": [Function],
    "status": Object {},
    "timer": null,
    "type": "antenna-genius-server",
    "updatesEventEmitter": UpdatesEventEmitter {
      "_events": Object {
        "closed": [Function],
        "connected": [Function],
        "status": [Function],
      },
      "_eventsCount": 3,
      "_maxListeners": 0,
      Symbol(kCapture): false,
    },
    "wires": Array [],
    "z": undefined,
  },
  "type": "antenna-genius-band-labels",
  "wires": Array [
    Array [
      "n3",
    ],
  ],
  "z": undefined,
}
`;

exports[`antenna-genius-band-labels Node should provide connected status 1`] = `
AntennaGeniusBandLabels {
  "_closeCallbacks": Array [],
  "_inputCallback": null,
  "_inputCallbacks": null,
  "_wire": "n3",
  "_wireCount": 1,
  "bandNameA": "",
  "bandNameB": "",
  "g": undefined,
  "id": "n2",
  "name": "test name",
  "send": [Function],
  "server": AntennaGeniusServerNode {
    "_closeCallbacks": Array [
      [Function],
    ],
    "_inputCallback": null,
    "_inputCallbacks": null,
    "_wireCount": 0,
    "activeColor": "Green",
    "antennas": Array [],
    "autoConnect": false,
    "bands": Array [],
    "client": Socket {
      "_events": Object {
        "close": [Function],
        "connect": [Function],
        "end": [Function],
        "error": [Function],
      },
      "_eventsCount": 4,
      "_hadError": false,
      "_host": null,
      "_maxListeners": undefined,
      "_parent": null,
      "_pendingData": null,
      "_pendingEncoding": "",
      "_readableState": ReadableState {
        "autoDestroy": true,
        "awaitDrainWriters": null,
        "buffer": BufferList {
          "head": null,
          "length": 0,
          "tail": null,
        },
        "closeEmitted": false,
        "closed": false,
        "constructed": true,
        "dataEmitted": false,
        "decoder": null,
        "defaultEncoding": "utf8",
        "destroyed": false,
        "emitClose": false,
        "emittedReadable": false,
        "encoding": null,
        "endEmitted": false,
        "ended": false,
        "errorEmitted": false,
        "errored": null,
        "flowing": null,
        "highWaterMark": 16384,
        "length": 0,
        "multiAwaitDrain": false,
        "needReadable": false,
        "objectMode": false,
        "pipes": Array [],
        "readableListening": false,
        "reading": false,
        "readingMore": false,
        "resumeScheduled": false,
        "sync": true,
        Symbol(kPaused): null,
      },
      "_server": null,
      "_sockname": null,
      "_writableState": WritableState {
        "afterWriteTickInfo": null,
        "allBuffers": true,
        "allNoop": true,
        "autoDestroy": true,
        "bufferProcessing": false,
        "buffered": Array [],
        "bufferedIndex": 0,
        "closeEmitted": false,
        "closed": false,
        "constructed": true,
        "corked": 0,
        "decodeStrings": false,
        "defaultEncoding": "utf8",
        "destroyed": false,
        "emitClose": false,
        "ended": false,
        "ending": false,
        "errorEmitted": false,
        "errored": null,
        "finalCalled": false,
        "finished": false,
        "highWaterMark": 16384,
        "length": 0,
        "needDrain": false,
        "objectMode": false,
        "onwrite": [Function],
        "pendingcb": 0,
        "prefinished": false,
        "sync": true,
        "writecb": null,
        "writelen": 0,
        "writing": false,
        Symbol(kOnFinished): Array [],
      },
      "allowHalfOpen": false,
      "connecting": false,
      "server": null,
      Symbol(async_id_symbol): -1,
      Symbol(kHandle): null,
      Symbol(kSetNoDelay): false,
      Symbol(lastWriteQueueSize): 0,
      Symbol(timeout): null,
      Symbol(kBuffer): null,
      Symbol(kBufferCb): null,
      Symbol(kBufferGen): null,
      Symbol(kCapture): false,
      Symbol(kBytesRead): 0,
      Symbol(kBytesWritten): 0,
    },
    "connected": false,
    "disabledColor": "Black",
    "g": undefined,
    "host": undefined,
    "id": "n1",
    "info": Object {
      "name": "Name",
    },
    "interval": null,
    "name": "test name",
    "port": 9007,
    "selectedColor": "Blue",
    "send": [Function],
    "status": Object {},
    "timer": null,
    "type": "antenna-genius-server",
    "updatesEventEmitter": UpdatesEventEmitter {
      "_events": Object {
        "closed": [Function],
        "connected": [Function],
        "status": [Function],
      },
      "_eventsCount": 3,
      "_maxListeners": 0,
      Symbol(kCapture): false,
    },
    "wires": Array [],
    "z": undefined,
  },
  "type": "antenna-genius-band-labels",
  "wires": Array [
    Array [
      "n3",
    ],
  ],
  "z": undefined,
}
`;

exports[`antenna-genius-band-labels Node should provide disconnected status 1`] = `
AntennaGeniusBandLabels {
  "_closeCallbacks": Array [],
  "_inputCallback": null,
  "_inputCallbacks": null,
  "_wire": "n3",
  "_wireCount": 1,
  "bandNameA": "",
  "bandNameB": "",
  "g": undefined,
  "id": "n2",
  "name": "test name",
  "send": [Function],
  "server": AntennaGeniusServerNode {
    "_closeCallbacks": Array [
      [Function],
    ],
    "_inputCallback": null,
    "_inputCallbacks": null,
    "_wireCount": 0,
    "activeColor": "Green",
    "antennas": Array [],
    "autoConnect": false,
    "bands": Array [],
    "client": Socket {
      "_events": Object {
        "close": [Function],
        "connect": [Function],
        "end": [Function],
        "error": [Function],
      },
      "_eventsCount": 4,
      "_hadError": false,
      "_host": null,
      "_maxListeners": undefined,
      "_parent": null,
      "_pendingData": null,
      "_pendingEncoding": "",
      "_readableState": ReadableState {
        "autoDestroy": true,
        "awaitDrainWriters": null,
        "buffer": BufferList {
          "head": null,
          "length": 0,
          "tail": null,
        },
        "closeEmitted": false,
        "closed": false,
        "constructed": true,
        "dataEmitted": false,
        "decoder": null,
        "defaultEncoding": "utf8",
        "destroyed": false,
        "emitClose": false,
        "emittedReadable": false,
        "encoding": null,
        "endEmitted": false,
        "ended": false,
        "errorEmitted": false,
        "errored": null,
        "flowing": null,
        "highWaterMark": 16384,
        "length": 0,
        "multiAwaitDrain": false,
        "needReadable": false,
        "objectMode": false,
        "pipes": Array [],
        "readableListening": false,
        "reading": false,
        "readingMore": false,
        "resumeScheduled": false,
        "sync": true,
        Symbol(kPaused): null,
      },
      "_server": null,
      "_sockname": null,
      "_writableState": WritableState {
        "afterWriteTickInfo": null,
        "allBuffers": true,
        "allNoop": true,
        "autoDestroy": true,
        "bufferProcessing": false,
        "buffered": Array [],
        "bufferedIndex": 0,
        "closeEmitted": false,
        "closed": false,
        "constructed": true,
        "corked": 0,
        "decodeStrings": false,
        "defaultEncoding": "utf8",
        "destroyed": false,
        "emitClose": false,
        "ended": false,
        "ending": false,
        "errorEmitted": false,
        "errored": null,
        "finalCalled": false,
        "finished": false,
        "highWaterMark": 16384,
        "length": 0,
        "needDrain": false,
        "objectMode": false,
        "onwrite": [Function],
        "pendingcb": 0,
        "prefinished": false,
        "sync": true,
        "writecb": null,
        "writelen": 0,
        "writing": false,
        Symbol(kOnFinished): Array [],
      },
      "allowHalfOpen": false,
      "connecting": false,
      "server": null,
      Symbol(async_id_symbol): -1,
      Symbol(kHandle): null,
      Symbol(kSetNoDelay): false,
      Symbol(lastWriteQueueSize): 0,
      Symbol(timeout): null,
      Symbol(kBuffer): null,
      Symbol(kBufferCb): null,
      Symbol(kBufferGen): null,
      Symbol(kCapture): false,
      Symbol(kBytesRead): 0,
      Symbol(kBytesWritten): 0,
    },
    "connected": false,
    "disabledColor": "Black",
    "g": undefined,
    "host": undefined,
    "id": "n1",
    "info": Object {
      "name": "Name",
    },
    "interval": null,
    "name": "test name",
    "port": 9007,
    "selectedColor": "Blue",
    "send": [Function],
    "status": Object {},
    "timer": null,
    "type": "antenna-genius-server",
    "updatesEventEmitter": UpdatesEventEmitter {
      "_events": Object {
        "closed": [Function],
        "connected": [Function],
        "status": [Function],
      },
      "_eventsCount": 3,
      "_maxListeners": 0,
      Symbol(kCapture): false,
    },
    "wires": Array [],
    "z": undefined,
  },
  "type": "antenna-genius-band-labels",
  "wires": Array [
    Array [
      "n3",
    ],
  ],
  "z": undefined,
}
`;

exports[`antenna-genius-band-labels Node should provide no output with no band definitions 1`] = `
AntennaGeniusBandLabels {
  "_closeCallbacks": Array [],
  "_inputCallback": null,
  "_inputCallbacks": null,
  "_wire": "n3",
  "_wireCount": 1,
  "bandNameA": "",
  "bandNameB": "",
  "g": undefined,
  "id": "n2",
  "name": "test name",
  "send": [Function],
  "server": AntennaGeniusServerNode {
    "_closeCallbacks": Array [
      [Function],
    ],
    "_inputCallback": null,
    "_inputCallbacks": null,
    "_wireCount": 0,
    "activeColor": "Green",
    "antennas": Array [],
    "autoConnect": false,
    "bands": Array [],
    "client": Socket {
      "_events": Object {
        "close": [Function],
        "connect": [Function],
        "end": [Function],
        "error": [Function],
      },
      "_eventsCount": 4,
      "_hadError": false,
      "_host": null,
      "_maxListeners": undefined,
      "_parent": null,
      "_pendingData": null,
      "_pendingEncoding": "",
      "_readableState": ReadableState {
        "autoDestroy": true,
        "awaitDrainWriters": null,
        "buffer": BufferList {
          "head": null,
          "length": 0,
          "tail": null,
        },
        "closeEmitted": false,
        "closed": false,
        "constructed": true,
        "dataEmitted": false,
        "decoder": null,
        "defaultEncoding": "utf8",
        "destroyed": false,
        "emitClose": false,
        "emittedReadable": false,
        "encoding": null,
        "endEmitted": false,
        "ended": false,
        "errorEmitted": false,
        "errored": null,
        "flowing": null,
        "highWaterMark": 16384,
        "length": 0,
        "multiAwaitDrain": false,
        "needReadable": false,
        "objectMode": false,
        "pipes": Array [],
        "readableListening": false,
        "reading": false,
        "readingMore": false,
        "resumeScheduled": false,
        "sync": true,
        Symbol(kPaused): null,
      },
      "_server": null,
      "_sockname": null,
      "_writableState": WritableState {
        "afterWriteTickInfo": null,
        "allBuffers": true,
        "allNoop": true,
        "autoDestroy": true,
        "bufferProcessing": false,
        "buffered": Array [],
        "bufferedIndex": 0,
        "closeEmitted": false,
        "closed": false,
        "constructed": true,
        "corked": 0,
        "decodeStrings": false,
        "defaultEncoding": "utf8",
        "destroyed": false,
        "emitClose": false,
        "ended": false,
        "ending": false,
        "errorEmitted": false,
        "errored": null,
        "finalCalled": false,
        "finished": false,
        "highWaterMark": 16384,
        "length": 0,
        "needDrain": false,
        "objectMode": false,
        "onwrite": [Function],
        "pendingcb": 0,
        "prefinished": false,
        "sync": true,
        "writecb": null,
        "writelen": 0,
        "writing": false,
        Symbol(kOnFinished): Array [],
      },
      "allowHalfOpen": false,
      "connecting": false,
      "server": null,
      Symbol(async_id_symbol): -1,
      Symbol(kHandle): null,
      Symbol(kSetNoDelay): false,
      Symbol(lastWriteQueueSize): 0,
      Symbol(timeout): null,
      Symbol(kBuffer): null,
      Symbol(kBufferCb): null,
      Symbol(kBufferGen): null,
      Symbol(kCapture): false,
      Symbol(kBytesRead): 0,
      Symbol(kBytesWritten): 0,
    },
    "connected": false,
    "disabledColor": "Black",
    "g": undefined,
    "host": undefined,
    "id": "n1",
    "info": Object {},
    "interval": null,
    "name": "test name",
    "port": 9007,
    "selectedColor": "Blue",
    "send": [Function],
    "status": Object {
      "portA_band": 0,
      "portB_band": 1,
    },
    "timer": null,
    "type": "antenna-genius-server",
    "updatesEventEmitter": UpdatesEventEmitter {
      "_events": Object {
        "closed": [Function],
        "connected": [Function],
        "status": [Function],
      },
      "_eventsCount": 3,
      "_maxListeners": 0,
      Symbol(kCapture): false,
    },
    "wires": Array [],
    "z": undefined,
  },
  "type": "antenna-genius-band-labels",
  "wires": Array [
    Array [
      "n3",
    ],
  ],
  "z": undefined,
}
`;

exports[`antenna-genius-band-labels Node should provide no output with no input 1`] = `
AntennaGeniusBandLabels {
  "_closeCallbacks": Array [],
  "_inputCallback": null,
  "_inputCallbacks": null,
  "_wire": "n3",
  "_wireCount": 1,
  "bandNameA": "",
  "bandNameB": "",
  "g": undefined,
  "id": "n2",
  "name": "test name",
  "send": [Function],
  "server": AntennaGeniusServerNode {
    "_closeCallbacks": Array [
      [Function],
    ],
    "_inputCallback": null,
    "_inputCallbacks": null,
    "_wireCount": 0,
    "activeColor": "Green",
    "antennas": Array [],
    "autoConnect": false,
    "bands": Array [],
    "client": Socket {
      "_events": Object {
        "close": [Function],
        "connect": [Function],
        "end": [Function],
        "error": [Function],
      },
      "_eventsCount": 4,
      "_hadError": false,
      "_host": null,
      "_maxListeners": undefined,
      "_parent": null,
      "_pendingData": null,
      "_pendingEncoding": "",
      "_readableState": ReadableState {
        "autoDestroy": true,
        "awaitDrainWriters": null,
        "buffer": BufferList {
          "head": null,
          "length": 0,
          "tail": null,
        },
        "closeEmitted": false,
        "closed": false,
        "constructed": true,
        "dataEmitted": false,
        "decoder": null,
        "defaultEncoding": "utf8",
        "destroyed": false,
        "emitClose": false,
        "emittedReadable": false,
        "encoding": null,
        "endEmitted": false,
        "ended": false,
        "errorEmitted": false,
        "errored": null,
        "flowing": null,
        "highWaterMark": 16384,
        "length": 0,
        "multiAwaitDrain": false,
        "needReadable": false,
        "objectMode": false,
        "pipes": Array [],
        "readableListening": false,
        "reading": false,
        "readingMore": false,
        "resumeScheduled": false,
        "sync": true,
        Symbol(kPaused): null,
      },
      "_server": null,
      "_sockname": null,
      "_writableState": WritableState {
        "afterWriteTickInfo": null,
        "allBuffers": true,
        "allNoop": true,
        "autoDestroy": true,
        "bufferProcessing": false,
        "buffered": Array [],
        "bufferedIndex": 0,
        "closeEmitted": false,
        "closed": false,
        "constructed": true,
        "corked": 0,
        "decodeStrings": false,
        "defaultEncoding": "utf8",
        "destroyed": false,
        "emitClose": false,
        "ended": false,
        "ending": false,
        "errorEmitted": false,
        "errored": null,
        "finalCalled": false,
        "finished": false,
        "highWaterMark": 16384,
        "length": 0,
        "needDrain": false,
        "objectMode": false,
        "onwrite": [Function],
        "pendingcb": 0,
        "prefinished": false,
        "sync": true,
        "writecb": null,
        "writelen": 0,
        "writing": false,
        Symbol(kOnFinished): Array [],
      },
      "allowHalfOpen": false,
      "connecting": false,
      "server": null,
      Symbol(async_id_symbol): -1,
      Symbol(kHandle): null,
      Symbol(kSetNoDelay): false,
      Symbol(lastWriteQueueSize): 0,
      Symbol(timeout): null,
      Symbol(kBuffer): null,
      Symbol(kBufferCb): null,
      Symbol(kBufferGen): null,
      Symbol(kCapture): false,
      Symbol(kBytesRead): 0,
      Symbol(kBytesWritten): 0,
    },
    "connected": false,
    "disabledColor": "Black",
    "g": undefined,
    "host": undefined,
    "id": "n1",
    "info": Object {},
    "interval": null,
    "name": "test name",
    "port": 9007,
    "selectedColor": "Blue",
    "send": [Function],
    "status": Object {},
    "timer": null,
    "type": "antenna-genius-server",
    "updatesEventEmitter": UpdatesEventEmitter {
      "_events": Object {
        "closed": [Function],
        "connected": [Function],
        "status": [Function],
      },
      "_eventsCount": 3,
      "_maxListeners": 0,
      Symbol(kCapture): false,
    },
    "wires": Array [],
    "z": undefined,
  },
  "type": "antenna-genius-band-labels",
  "wires": Array [
    Array [
      "n3",
    ],
  ],
  "z": undefined,
}
`;

exports[`antenna-genius-band-labels Node should provide output 1`] = `
AntennaGeniusBandLabels {
  "_closeCallbacks": Array [],
  "_inputCallback": null,
  "_inputCallbacks": null,
  "_wire": "n3",
  "_wireCount": 1,
  "bandNameA": "bandA",
  "bandNameB": "bandB",
  "g": undefined,
  "id": "n2",
  "name": "test name",
  "send": [Function],
  "server": AntennaGeniusServerNode {
    "_closeCallbacks": Array [
      [Function],
    ],
    "_inputCallback": null,
    "_inputCallbacks": null,
    "_wireCount": 0,
    "activeColor": "Green",
    "antennas": Array [],
    "autoConnect": false,
    "bands": Array [
      Object {
        "band_name": "bandA",
      },
      Object {
        "band_name": "bandB",
      },
    ],
    "client": Socket {
      "_events": Object {
        "close": [Function],
        "connect": [Function],
        "end": [Function],
        "error": [Function],
      },
      "_eventsCount": 4,
      "_hadError": false,
      "_host": null,
      "_maxListeners": undefined,
      "_parent": null,
      "_pendingData": null,
      "_pendingEncoding": "",
      "_readableState": ReadableState {
        "autoDestroy": true,
        "awaitDrainWriters": null,
        "buffer": BufferList {
          "head": null,
          "length": 0,
          "tail": null,
        },
        "closeEmitted": false,
        "closed": false,
        "constructed": true,
        "dataEmitted": false,
        "decoder": null,
        "defaultEncoding": "utf8",
        "destroyed": false,
        "emitClose": false,
        "emittedReadable": false,
        "encoding": null,
        "endEmitted": false,
        "ended": false,
        "errorEmitted": false,
        "errored": null,
        "flowing": null,
        "highWaterMark": 16384,
        "length": 0,
        "multiAwaitDrain": false,
        "needReadable": false,
        "objectMode": false,
        "pipes": Array [],
        "readableListening": false,
        "reading": false,
        "readingMore": false,
        "resumeScheduled": false,
        "sync": true,
        Symbol(kPaused): null,
      },
      "_server": null,
      "_sockname": null,
      "_writableState": WritableState {
        "afterWriteTickInfo": null,
        "allBuffers": true,
        "allNoop": true,
        "autoDestroy": true,
        "bufferProcessing": false,
        "buffered": Array [],
        "bufferedIndex": 0,
        "closeEmitted": false,
        "closed": false,
        "constructed": true,
        "corked": 0,
        "decodeStrings": false,
        "defaultEncoding": "utf8",
        "destroyed": false,
        "emitClose": false,
        "ended": false,
        "ending": false,
        "errorEmitted": false,
        "errored": null,
        "finalCalled": false,
        "finished": false,
        "highWaterMark": 16384,
        "length": 0,
        "needDrain": false,
        "objectMode": false,
        "onwrite": [Function],
        "pendingcb": 0,
        "prefinished": false,
        "sync": true,
        "writecb": null,
        "writelen": 0,
        "writing": false,
        Symbol(kOnFinished): Array [],
      },
      "allowHalfOpen": false,
      "connecting": false,
      "server": null,
      Symbol(async_id_symbol): -1,
      Symbol(kHandle): null,
      Symbol(kSetNoDelay): false,
      Symbol(lastWriteQueueSize): 0,
      Symbol(timeout): null,
      Symbol(kBuffer): null,
      Symbol(kBufferCb): null,
      Symbol(kBufferGen): null,
      Symbol(kCapture): false,
      Symbol(kBytesRead): 0,
      Symbol(kBytesWritten): 0,
    },
    "connected": false,
    "disabledColor": "Black",
    "g": undefined,
    "host": undefined,
    "id": "n1",
    "info": Object {
      "name": "Name",
    },
    "interval": null,
    "name": "test name",
    "port": 9007,
    "selectedColor": "Blue",
    "send": [Function],
    "status": Object {
      "portA_band": 0,
      "portB_band": 1,
    },
    "timer": null,
    "type": "antenna-genius-server",
    "updatesEventEmitter": UpdatesEventEmitter {
      "_events": Object {
        "closed": [Function],
        "connected": [Function],
        "status": [Function],
      },
      "_eventsCount": 3,
      "_maxListeners": 0,
      Symbol(kCapture): false,
    },
    "wires": Array [],
    "z": undefined,
  },
  "type": "antenna-genius-band-labels",
  "wires": Array [
    Array [
      "n3",
    ],
  ],
  "z": undefined,
}
`;
